# Chat

./: .gitignore  CMakeLists.txt  CMakePresets.json  Chat.sln  README.md
Chat/: Chat.cpp  Chat.h  Chat.vcxproj  Chat.vcxproj.filters  Crypto.cpp  Crypto.h  Functions.cpp  Functions.h  Message.cpp  Message.h  Program.cpp  Program.h  User.cpp  User.h  chats.json  main.cpp  users.json
Messenger/: CMakeLists.txt  Chat.h  Connection.cpp  Connection.h  Program.cpp  Program.h  SQL.cpp  SQL.h  User.h  main.cpp
